--- a/JAVA/src/com/view/TradeWindow.form
+++ b/JAVA/src/com/view/TradeWindow.form
@@ -639,6 +639,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Submit Selected Blocks"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TraderSubmitBlocksActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JCheckBox" name="TraderSelectAllBlocks">
               <Properties>
