Can now change password

--- a/JAVA/src/com/view/ChangePassword.form
+++ b/JAVA/src/com/view/ChangePassword.form
@@ -42,9 +42,9 @@
                       </Group>
                       <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="OldPassText" min="-2" pref="106" max="-2" attributes="0"/>
-                          <Component id="NewPassText" min="-2" pref="106" max="-2" attributes="0"/>
-                          <Component id="ConfirmPassText" min="-2" pref="106" max="-2" attributes="0"/>
+                          <Component id="OldPassTextField" min="-2" pref="106" max="-2" attributes="0"/>
+                          <Component id="NewPassTextField" min="-2" pref="106" max="-2" attributes="0"/>
+                          <Component id="ConfirmPassTextField" min="-2" pref="106" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -60,17 +60,17 @@
               <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="label2" min="-2" max="-2" attributes="0"/>
-                  <Component id="OldPassText" min="-2" max="-2" attributes="0"/>
+                  <Component id="OldPassTextField" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Component id="label3" min="-2" max="-2" attributes="0"/>
-                  <Component id="NewPassText" min="-2" max="-2" attributes="0"/>
+                  <Component id="NewPassTextField" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="30" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="label4" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="ConfirmPassText" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <Component id="ConfirmPassTextField" alignment="1" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -135,11 +135,14 @@
         <Property name="text" type="java.lang.String" value="New Password:"/>
       </Properties>
     </Component>
-    <Component class="java.awt.TextField" name="NewPassText">
-    </Component>
-    <Component class="java.awt.TextField" name="OldPassText">
+    <Component class="java.awt.TextField" name="NewPassTextField">
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="OldPassTextActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="NewPassTextFieldActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="java.awt.TextField" name="OldPassTextField">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="OldPassTextFieldActionPerformed"/>
       </Events>
     </Component>
     <Component class="java.awt.Label" name="label4">
@@ -147,7 +150,7 @@
         <Property name="text" type="java.lang.String" value="Confirm Password:"/>
       </Properties>
     </Component>
-    <Component class="java.awt.TextField" name="ConfirmPassText">
+    <Component class="java.awt.TextField" name="ConfirmPassTextField">
     </Component>
   </SubComponents>
 </Form>
