--- a/JAVA/src/com/view/PortfolioManagerWindow.form
+++ b/JAVA/src/com/view/PortfolioManagerWindow.form
@@ -420,14 +420,8 @@
           <SubComponents>
             <Component class="javax.swing.JComboBox" name="PMSelectTraderOptions">
               <Properties>
-                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="5">
-                    <StringItem index="0" value="Automatic"/>
-                    <StringItem index="1" value="Trader 1"/>
-                    <StringItem index="2" value="Trader 2"/>
-                    <StringItem index="3" value="Trader 3"/>
-                    <StringItem index="4" value="Trader 4"/>
-                  </StringArray>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(TraderNames)" type="code"/>
                 </Property>
               </Properties>
               <Events>
