--- a/JAVA/src/com/view/PortfolioManagerWindow.form
+++ b/JAVA/src/com/view/PortfolioManagerWindow.form
@@ -567,8 +567,8 @@
         <Container class="javax.swing.JPanel" name="PMOrderHistory">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="Order History">
-                <Property name="tabTitle" type="java.lang.String" value="Order History"/>
+              <JTabbedPaneConstraints tabName="Executed Order History">
+                <Property name="tabTitle" type="java.lang.String" value="Executed Order History"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
