--- a/JAVA/bin/com/view/PortfolioManagerWindow.form
+++ b/JAVA/bin/com/view/PortfolioManagerWindow.form
@@ -123,7 +123,7 @@
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                      <Connection code="CPMPendingRequest.getPRTableModel()" type="code"/>
+                      <Connection code="com.controller.CPMOrderMANIAC.getPRTableModel()" type="code"/>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0"/>
@@ -567,8 +567,8 @@
         <Container class="javax.swing.JPanel" name="PMOrderHistory">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="Order History">
-                <Property name="tabTitle" type="java.lang.String" value="Order History"/>
+              <JTabbedPaneConstraints tabName="Executed Order History">
+                <Property name="tabTitle" type="java.lang.String" value="Executed Order History"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
@@ -633,7 +633,7 @@
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                      <Connection code="CPMPendingRequest.getOHTableModel()" type="code"/>
+                      <Connection code="com.controller.CPMOrderMANIAC.getOHTableModel()" type="code"/>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0"/>
