--- a/JAVA/bin/com/view/PortfolioManagerWindow.form
+++ b/JAVA/bin/com/view/PortfolioManagerWindow.form
@@ -483,13 +483,14 @@
               <SubComponents>
                 <Component class="javax.swing.JTable" name="PMSendOrderTable">
                   <Properties>
-                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor" postCode="TableColumn col2 = PMSendOrderTable.getColumnModel().getColumn(1);&#xa;col2.setCellEditor(new myComboBoxEditor(StockExchange));&#xa;col2.setCellRenderer(new MyComboBoxRenderer(StockExchange));&#xa;TableColumn col1 = PMSendOrderTable.getColumnModel().getColumn(4);&#xa;col1.setCellEditor(new myComboBoxEditor(ActionItems));&#xa;col1.setCellRenderer(new MyComboBoxRenderer(ActionItems));&#xa;TableColumn col3 = PMSendOrderTable.getColumnModel().getColumn(7);&#xa;col3.setCellEditor(new myComboBoxEditor(AccountType));&#xa;col3.setCellRenderer(new MyComboBoxRenderer(AccountType));">
-                      <Table columnCount="8" rowCount="1">
+                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor" postCode="TableColumn col2 = PMSendOrderTable.getColumnModel().getColumn(1);&#xa;col2.setCellEditor(new myComboBoxEditor(StockExchange));&#xa;col2.setCellRenderer(new MyComboBoxRenderer(StockExchange));&#xa;TableColumn col1 = PMSendOrderTable.getColumnModel().getColumn(4);&#xa;col1.setCellEditor(new myComboBoxEditor(ActionItems));&#xa;col1.setCellRenderer(new MyComboBoxRenderer(ActionItems));&#xa;TableColumn col5 = PMSendOrderTable.getColumnModel().getColumn(5);&#xa;col5.setCellEditor(new myComboBoxEditor(OrderType));&#xa;col5.setCellRenderer(new MyComboBoxRenderer(OrderType));&#xa;TableColumn col3 = PMSendOrderTable.getColumnModel().getColumn(8);&#xa;col3.setCellEditor(new myComboBoxEditor(AccountType));&#xa;col3.setCellRenderer(new MyComboBoxRenderer(AccountType));">
+                      <Table columnCount="9" rowCount="1">
                         <Column editable="true" title="Portfolio ID" type="java.lang.Long"/>
                         <Column editable="true" title="Stock Exchange" type="java.lang.String"/>
                         <Column editable="true" title="Symbol" type="java.lang.String"/>
                         <Column editable="true" title="Quantity" type="java.lang.Integer"/>
                         <Column editable="true" title="Action" type="java.lang.String"/>
+                        <Column editable="true" title="Order Type" type="java.lang.String"/>
                         <Column editable="true" title="Stop Price" type="java.lang.Double"/>
                         <Column editable="true" title="Limit Price" type="java.lang.Double"/>
                         <Column editable="true" title="Account Type" type="java.lang.String"/>
@@ -497,6 +498,11 @@
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                           <Title/>
                           <Editor/>
