--- a/JAVA/src/com/view/PortfolioManagerWindow.form
+++ b/JAVA/src/com/view/PortfolioManagerWindow.form
@@ -273,13 +273,8 @@
               <SubComponents>
                 <Component class="javax.swing.JTable" name="PMEODBoughtTable">
                   <Properties>
-                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="4" rowCount="14">
-                        <Column editable="true" title="Portfolio ID" type="java.lang.Integer"/>
-                        <Column editable="true" title="Symbol" type="java.lang.String"/>
-                        <Column editable="true" title="Quantity" type="java.lang.Integer"/>
-                        <Column editable="true" title="Price" type="java.lang.Double"/>
-                      </Table>
+                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                      <Connection code="CPMEndOfDay.getBuyTableModel()" type="code"/>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
@@ -549,6 +544,9 @@
                       <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                     </Property>
                   </Properties>
+                  <AuxValues>
+                    <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="/////////////////////////////////////GG&#xa;TableColumn col4 = PMSendOrderTable.getColumnModel().getColumn(2);&#xa;        &#xa;        CSVReader csv = new CSVReader();&#xa;        ArrayList&lt;String&gt; symbolList = csv.loadSymbol();&#xa;&#xa;Java2sAutoComboBox comboBox = new Java2sAutoComboBox(symbolList);&#xa;        comboBox.setDataList(symbolList);&#xa;        comboBox.setMaximumRowCount(5);&#xa;        col4.setCellEditor(new DefaultCellEditor(comboBox));&#xa;        //Set up tool tips for the sport cells.&#xa;        DefaultTableCellRenderer renderer = new DefaultTableCellRenderer();&#xa;        renderer.setToolTipText(&quot;Click for combo box&quot;);&#xa;        col4.setCellRenderer(renderer);&#xa;&#xa;&#xa;/////////////////////////////////////gg"/>
+                  </AuxValues>
                 </Component>
               </SubComponents>
             </Container>
